@@ -18,7 +18,7 @@ class ConfigurationActionsFileTransferTest < Test::Unit::TestCase
 
   def test_put_should_delegate_to_Upload_process
     @config.expects(:execute_on_servers).yields(%w(s1 s2 s3).map { |s| mock(:host => s) })
-    @config.expects(:sessions).times(3).returns(Hash.new{|h,k| h[k] = k.to_sym})
+    @config.expects(:sessions).times(3).returns(Hash.new{|h,k| h[k] = k.host.to_sym})
     Capistrano::Upload.expects(:process).with([:s1,:s2,:s3], "test.txt", :data => "some data", :mode => 0777, :logger => @config.logger)
     @config.put("some data", "test.txt", :mode => 0777)
   end
@@ -31,8 +31,10 @@ class ConfigurationActionsFileTransferTest < Test::Unit::TestCase
   def test_get_should_use_sftp_get_file_to_local_path
     sftp = mock("sftp", :state => :closed, :connect => true)
     sftp.expects(:get_file).with("remote.txt", "local.txt")
-    @config.expects(:execute_on_servers).yields([stub("server", :host => "capistrano")])
-    @config.expects(:sessions).returns("capistrano" => mock("session", :sftp => sftp))
+
+    s = server("capistrano")
+    @config.expects(:execute_on_servers).yields([s])
+    @config.expects(:sessions).returns(s => mock("session", :sftp => sftp))
     @config.get("remote.txt", "local.txt")
   end
 end
